@@ -2,6 +2,7 @@
 
 = GENI Clearinghouse and Portal Release Notes =
 == 1.9 ==
+  * Fix warnings in gemini.php (#641)
   * SA/PA merge (#540)
 
 == 1.8.1 ==
